# Rust-WASM-Web-App-Template

./: .gitignore  Cargo.toml  README.md  jsconfig.json  package.json  playwright.config.js  pnpm-lock.yaml  setup.py
app/: Cargo.toml  README.md
app/src/: app_handle.rs  dom_creation.rs  drawing_app.rs  event_listeners.rs  lib.rs  mount.rs  rendering.rs  utils.rs
app/tests/: app_wasm_tests.rs
base/: Cargo.toml  README.md
base/src/: lib.rs  logic.rs  state.rs
base/tests/: core_tests.rs
cli/: Cargo.toml
cli/src/: args.rs  build.rs  main.rs  paths.rs  process_runner.rs  server.rs  test_runner.rs
cli/src/commands/: build_cmd.rs  dev_cmd.rs  e2e_cmd.rs  mod.rs  serve_cmd.rs  test_cmd.rs
e2e_tests/: app.spec.js  consoleUtils.js  global.d.ts  testUtils.js
static/: index.html  main.js
static/css/: style.css
static/js/: README.md  appManager.js
